fix: overflow issue mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,7 +8,6 @@ body {
   font-size: 16px;
   background: center/cover no-repeat;
   background: $dark;
-  overflow: hidden;
 }
 
 .overflow-hidden {
